--- a/mod2_sol/assign1.html
+++ b/mod2_sol/assign1.html
@@ -19,7 +19,7 @@ h1{
 
 }
 .col-lg-1{
-	width: 33.33%;
+	width: 33%;
 
 }
 .col-lg-2{
@@ -40,7 +40,7 @@ h1{
 
 }
 .col-md-2{
-	width: 50%;
+	width: 49.759%;
 }
 .col-md-3{
 	width: 100%;
@@ -74,20 +74,21 @@ h1{
 <div>
 <b>Our Menu</b></div></h1><div class ="row">
 <div class="col-lg-1 col-md-2 col-sm-3" >
-<p><p class="p1">chicken</p>
+<p>chicken<br>
 i like chicken a lot <br>
 we have a lot of options for chicken.<br>
 delecious chicken ,, butter chicken ,, chicken chiken chiken!!<br>
-</p>
-<p><p class="p1">BEEF</p>
+</p></div>
+<div class="col-lg-1 col-md-2 col-sm-3" >
+<p >BEEF<br>
 i hate beef
 <br>
 we dont have beef,, dont dare too eat beef .. its very bad . .<br>
 i am kidding <br>
-bt if u want  u can have bt trust me u wont like it<br>
-</p>
-<p><p class="p1">Sushi</p>
-its a japanese dish,  we dont make it here , it is too costly, i can make it , but u wont be able to afford it, if u are rich enough then only try here ,or else go and sleep</p>
+</p></div>
+<div class="col-lg-1 col-md-3 col-sm-3" >
+<p>Sushi<br>
+its a japanese dish,  we dont make it here , it is too costly, i can make it , but u wont be able to afford it, if u are rich enough then only try here ,or else go and sleep</p></div>
 
 
 
