--- a/mod2_sol/assign1.html
+++ b/mod2_sol/assign1.html
@@ -3,23 +3,25 @@
 <head>
 	<title>Assignment Solution for Module 2</title>
 </head>
-<style>
+<style >
 h1{
 	text-align: center;
+	color: Red;
     
 
 }
-.row{
+.row{ 
 	width: 100%;
 }
 @media(min-width: 992px){
 .col-lg-1,.col-lg-2,.col-lg-3{
 	float:left;
     border: 1px solid black;
-
+	margin:15px;
+padding:0;
 }
 .col-lg-1{
-	width: 33%;
+	width: 30%;
 
 }
 .col-lg-2{
@@ -33,6 +35,8 @@ h1{
 .col-md-1,.col-md-2,.col-md-3{
 	float:left;
     border: 1px solid black;
+margin:20px;
+padding:0;
 
 }
 .col-md-1{
@@ -40,7 +44,8 @@ h1{
 
 }
 .col-md-2{
-	width: 49.759%;
+	width: 45.5%;
+	
 }
 .col-md-3{
 	width: 100%;
@@ -50,7 +55,8 @@ h1{
 .col-sm-1,.col-sm-2,.col-sm-3{
 	float:left;
     border: 1px solid black;
-
+margin:25px;
+padding:0;
 }
 .col-sm-1{
 	width: 33.33%;
@@ -64,30 +70,67 @@ h1{
 }
 }
 .p1{
-	position: relative;
-	top:0;
-	left: 100%; 
+	
+position: relative;
+	top:0%;
+	left: 80%;
+ box-sizing: border-box; 
+border: 1px solid black;
+width:70px;
+margin-top:0;
+background-color:cyan;
 }
+.p2{
+	
+position: relative;
+	top:0%;
+	left: 80%;
+ box-sizing: border-box; 
+border: 1px solid black;
+width:70px;
+margin-top:0;
+background-color:green;
+}
+.p3{
+	
+position: relative;
+	top:0%;
+	left: 80%;
+ box-sizing: border-box; 
+border: 1px solid black;
+width:70px;
+margin-top:0;
+background-color:red;
+}
+body
+{
+	margin:0;
+	padding:0;
+	background-color:grey;
+	color:blue; 
+}
+
+
 </style>
 <body>
-<h1>
+<h1 >
 <div>
 <b>Our Menu</b></div></h1><div class ="row">
 <div class="col-lg-1 col-md-2 col-sm-3" >
-<p>chicken<br>
+<p><p class="p1">chicken</p><br>
 i like chicken a lot <br>
 we have a lot of options for chicken.<br>
 delecious chicken ,, butter chicken ,, chicken chiken chiken!!<br>
 </p></div>
 <div class="col-lg-1 col-md-2 col-sm-3" >
-<p >BEEF<br>
+<p><p class="p2">BEEF</p><br>
 i hate beef
 <br>
 we dont have beef,, dont dare too eat beef .. its very bad . .<br>
 i am kidding <br>
 </p></div>
 <div class="col-lg-1 col-md-3 col-sm-3" >
-<p>Sushi<br>
+<p><p class="p3">Sushi</p><br>
 its a japanese dish,  we dont make it here , it is too costly, i can make it , but u wont be able to afford it, if u are rich enough then only try here ,or else go and sleep</p></div>
 
 
